--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -1,24 +1,22 @@
 <!-- src/main/resources/templates/login.html -->
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8"/>
     <title>Login Page</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
-    <div th:replace="@{/fragments/Menu}::menu"> </div>
-    <div class="login-container">
-        <h2>Login</h2>
-        <form action="/login" method="post">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required/>
-            <br/>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required/>
-            <br/>
-            <button type="submit">Login</button>
-        </form>
+<div class="login-container">
+    <h2>Login</h2>
+    <form action="/login" method="post">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required/>
+        <br/>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required/>
+        <br/>
+        <button type="submit">Login</button>
+    </form>
     </div>
 </body>
 </html>
