--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8"/>
     <title>Home Page</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
-    
-    <div th:replace="@{/fragments/Menu}::menu"> </div>
 
-    <section>
-        <!-- Content specific to the home page -->
-        <h2>Welcome to Our Website</h2>
-        <p>Explore and discover amazing things!</p>
-    </section>
+<div class="header">
+    <nav>
+        <ul>
+            <div class="white-box-header"><a href="/about-us">About Us</a></div>
+        </ul>
+    </nav>
+</div>
 
-    <footer>
-        <p>&copy; 2023 Your Website Name</p>
-    </footer>
+<div class="welcome-box">
+    <h2>Welcome to ProtoPNet feedback collector website!</h2>
+    <p>Help us by giving feedback on correctness of model prototypes prediction</p>
+
+    <div class="button-container">
+        <a class="action-button" href="/login">Log In</a>
+        <a class="action-button" href="/register">Sign Up</a>
+    </div>
+</div>
+
 </body>
 </html>
