--- a/src/main/resources/templates/AboutUs.html
+++ b/src/main/resources/templates/AboutUs.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>About Us</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" type="text/css" href="/css/style.css"/>
 </head>
 <body>
@@ -18,10 +19,10 @@
 
 <div class="content-container">
     <div class="welcome-box">
-        <h2>Something about a project</h2>
-        <p>bla bla bla!</p>
+        <h2>Who We Are</h2>
+        <p>We are a team of three technology enthusiasts from Jagiellonian University, led by Dawid Rymarczyk. We are developing a user-friendly tool to help understand the thought progress of a machine learning model. We are using a model developed by Chaofan Chen, Oscar Li, Chaofan Tao, Alina Jade Barnett, and Cynthia Rudin from <a href="https://github.com/cfchen-duke/ProtoPNet" target="_blank">https://github.com/cfchen-duke/ProtoPNet</a> </p>
         <div class="button-container">
-            <a class="action-button" href="/picture-selection">Start</a>
+            <a class="action-button" href="/picture-selection">Get Started</a>
         </div>
     </div>
 </div>
