--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,6 +8,7 @@
     height: 150px;
     cursor: pointer;
     transition: transform 0.3s ease;
+    border: 2px solid transparent;
 }
 
 .image-item:hover {
@@ -15,7 +16,7 @@
 }
 
 .image-item.selected {
-    border: 2px solid blue;
+    border: 2px solid #4CAF50;
 }
 
 /*background picture settings*/
@@ -225,19 +226,22 @@ body {
 }
 
 .image-item {
-    width: 100%;
-    height: 80px;
+    width: 150px;
+    height: 150px;
     cursor: pointer;
     transition: transform 0.3s ease;
+    border: 2px solid transparent;
 }
 
 .white-box button {
+    font-size: 18px;
     padding: 10px 20px;
     background-color: #4CAF50;
     color: #ffffff;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    margin-top: 10px;
 }
 
 .white-box button:hover {
@@ -257,12 +261,43 @@ body {
     text-decoration: underline;
 }
 
+select {
+    width: 100%;
+    padding: 10px 15px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: #f8f8f8;
+    color: #333;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+/* Arrow indicator for select (using background image) */
+select {
+    background-image: url('data:image/svg+xml;utf8,<svg fill="%23333" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+    background-position: right 10px center;
+    background-repeat: no-repeat;
+    background-size: 16px 16px;
+    padding-right: 30px;
+}
+
+select:focus {
+    outline: none;
+    border-color: #4CAF50;
+}
+
 /*Header*/
 .header {
     position: fixed;
     top: 0;
     left: 0;
     color: #fff;
+    margin-bottom: 30px;
 }
 
 .header a {
