--- a/src/main/resources/templates/HomePageForRegisteredUser.html
+++ b/src/main/resources/templates/HomePageForRegisteredUser.html
@@ -13,6 +13,7 @@
             <div class="white-box-header"><a href="/about-us">About Us</a></div>
             <div class="white-box-header"><a href="/picture-selection">Bird Selection</a></div>
             <div class="white-box-header sign-out"><a href="/logout">Sign Out</a></div>
+            <div class="white-box-header"><a href="/history">History</a></div>
         </ul>
     </nav>
 </div>
