--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -370,3 +370,23 @@ select:focus {
     white-space: nowrap;
     margin-right: -250px;
 }
+
+.hidden {
+    display: none;
+}
+
+/*modal style*/
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+}
+
+.red-frame {
+    border: 4px solid red;
+    padding: 5px;
+    border-radius: 5px;
+}
