selecting pictures with mouse

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -416,3 +416,13 @@ select:focus {
     padding: 5px;
     border-radius: 5px;
 }
+
+.activateDrawing {
+    margin-top: 10px;
+    padding: 5px 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
