--- a/src/main/resources/templates/PictureSelection.html
+++ b/src/main/resources/templates/PictureSelection.html
@@ -13,6 +13,7 @@
         <ul>
             <div class="white-box-header"><a href="/home">Home</a></div>
             <div class="white-box-header"><a href="/about-us">About Us</a></div>
+            <div class="white-box-header"><a href="/history">History</a></div>
         </ul>
     </nav>
 </div>
